opam-version: "2.0"
name: "leaf_pst"
version: "0.1.0"
synopsis: "A coupled leaf photosynthesis–stomatal conductance–temperature model"
description: """
A coupled leaf photosynthesis–stomatal conductance–temperature model
"""
maintainer: "Wu Sun <wusun@protonmail.com>"
authors: "Wu Sun"
license: "MIT"
homepage: "https://github.com/wusunlab/leaf-pst"
bug-reports: "https://github.com/wusunlab/leaf-pst/issues"
dev-repo: "https://github.com/wusunlab/leaf-pst.git"
depends: [
  "ocaml" {>= "4.06"}
  "owl" {>= "0.4.0"}
  "dune" {build & >= "1.5.0"}
  "alcotest" {test}
]
build: ["dune" "build" "-p" name "-j" jobs]
build-test: ["dune" "runtest" "-p" name]
